<resources>
    <string name="app_name">MiningHelper</string>
    <string name="reported_hashrate">Reported Hashrate</string>
    <string name="current_hashrate">Current Hashrate</string>
    <string name="average_hashrate">Average Hashrate</string>
    <string name="default_hashrate_0_h_s">0 H/s</string>
    <string name="string_workers">Workers</string>
    <string name="string_total">TOTAL</string>
    <string name="default_string_total_workers">0/0</string>
    <string name="settings">Settings</string>
    <string name="refresh_data">Refresh data</string>
    <string name="ethermine">Ethermine</string>
    <string name="current_n_hashrate">Current\nHashrate</string>
    <!--<string name="current_n_hashrate">216.6 MH/s</string>-->
    <string name="reported_n_hashrate">Reported\nHashrate</string>
    <!--<string name="reported_n_hashrate">216.6 MH/s</string>-->
    <string name="valid">valid</string>
    <string name="stale">stale</string>
    <string name="invalid">invalid</string>
    <string name="time">time</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_email">Email</string>
    <string name="pref_default_display_email">email@example.com</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_general_title_display_wallet">Wallet</string>
    <string name="empty_string" />
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_pools">Pools</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="string_hashrates_title_graph">Hashrates</string>
    <string name="string_shares_title_graph">Shares</string>
    <string name="string_workers_title_graph">Workers</string>
    <string name="big_title_ethermine">Ethermine</string>
</resources>
